ANTLR/PddlParser.py
# Generated from Pddl.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PddlParser ( Parser ):

    grammarFileName = "Pddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'define'", "')'", "'domain'", 
                     "':requirements'", "':types'", "'-'", "'either'", "'at'", 
                     "'begin'", "'end'", "':functions'", "'number'", "':constants'", 
                     "':predicates'", "':constraints'", "':action'", "':parameters'", 
                     "':precondition'", "':effect'", "'and'", "'AND'", "'or'", 
                     "'not'", "'imply'", "'exists'", "'forall'", "':durative-action'", 
                     "':duration'", "':condition'", "'preference'", "'over'", 
                     "'start'", "'all'", "':derived'", "'when'", "'*'", 
                     "'+'", "'/'", "'>'", "'<'", "'='", "'>='", "'<='", 
                     "'assign'", "'scale-up'", "'scale-down'", "'increase'", 
                     "'decrease'", "'?duration'", "'problem'", "':domain'", 
                     "':objects'", "':init'", "':INIT'", "':goal'", "':metric'", 
                     "'minimize'", "'maximize'", "'total-time'", "'is-violated'", 
                     "'always'", "'sometime'", "'within'", "'at-most-once'", 
                     "'sometime-after'", "'sometime-before'", "'always-within'", 
                     "'hold-during'", "'hold-after'", "<INVALID>", "'DOMAIN'", 
                     "'DOMAIN_NAME'", "'REQUIREMENTS'", "'TYPES'", "'EITHER_TYPE'", 
                     "'CONSTANTS'", "'FUNCTIONS'", "'PREDICATES'", "'ACTION'", 
                     "'DURATIVE_ACTION'", "'PROBLEM'", "'PROBLEM_NAME'", 
                     "'PROBLEM_DOMAIN'", "'OBJECTS'", "'INIT'", "'FUNC_HEAD'", 
                     "'PRECONDITION'", "'EFFECT'", "'AND_GD'", "'OR_GD'", 
                     "'NOT_GD'", "'IMPLY_GD'", "'EXISTS_GD'", "'FORALL_GD'", 
                     "'COMPARISON_GD'", "'AND_EFFECT'", "'FORALL_EFFECT'", 
                     "'WHEN_EFFECT'", "'ASSIGN_EFFECT'", "'NOT_EFFECT'", 
                     "'PRED_HEAD'", "'GOAL'", "'BINARY_OP'", "'UNARY_MINUS'", 
                     "'INIT_EQ'", "'INIT_AT'", "'NOT_PRED_INIT'", "'PRED_INST'", 
                     "'PROBLEM_CONSTRAINT'", "'PROBLEM_METRIC'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "REQUIRE_KEY", 
                      "DOMAIN", "DOMAIN_NAME", "REQUIREMENTS", "TYPES", 
                      "EITHER_TYPE", "CONSTANTS", "FUNCTIONS", "PREDICATES", 
                      "ACTION", "DURATIVE_ACTION", "PROBLEM", "PROBLEM_NAME", 
                      "PROBLEM_DOMAIN", "OBJECTS", "INIT", "FUNC_HEAD", 
                      "PRECONDITION", "EFFECT", "AND_GD", "OR_GD", "NOT_GD", 
                      "IMPLY_GD", "EXISTS_GD", "FORALL_GD", "COMPARISON_GD", 
                      "AND_EFFECT", "FORALL_EFFECT", "WHEN_EFFECT", "ASSIGN_EFFECT", 
                      "NOT_EFFECT", "PRED_HEAD", "GOAL", "BINARY_OP", "UNARY_MINUS", 
                      "INIT_EQ", "INIT_AT", "NOT_PRED_INIT", "PRED_INST", 
                      "PROBLEM_CONSTRAINT", "PROBLEM_METRIC", "NAME", "VARIABLE", 
                      "NUMBER", "LINE_COMMENT", "WHITESPACE" ]

    RULE_pddlDoc = 0
    RULE_domain = 1
    RULE_domainName = 2
    RULE_requireDef = 3
    RULE_typesDef = 4
    RULE_typedNameList = 5
    RULE_singleTypeNameList = 6
    RULE_type_ = 7
    RULE_primType = 8
    RULE_functionsDef = 9
    RULE_functionList = 10
    RULE_atomicFunctionSkeleton = 11
    RULE_functionSymbol = 12
    RULE_functionType = 13
    RULE_constantsDef = 14
    RULE_predicatesDef = 15
    RULE_atomicFormulaSkeleton = 16
    RULE_predicate = 17
    RULE_typedVariableList = 18
    RULE_singleTypeVarList = 19
    RULE_constraints = 20
    RULE_structureDef = 21
    RULE_actionDef = 22
    RULE_actionSymbol = 23
    RULE_actionDefBody = 24
    RULE_goalDesc = 25
    RULE_fComp = 26
    RULE_atomicTermFormula = 27
    RULE_term = 28
    RULE_durativeActionDef = 29
    RULE_daDefBody = 30
    RULE_daGD = 31
    RULE_prefTimedGD = 32
    RULE_timedGD = 33
    RULE_timeSpecifier = 34
    RULE_interval = 35
    RULE_derivedDef = 36
    RULE_fExp = 37
    RULE_fExp2 = 38
    RULE_fHead = 39
    RULE_effect = 40
    RULE_cEffect = 41
    RULE_pEffect = 42
    RULE_condEffect = 43
    RULE_binaryOp = 44
    RULE_binaryComp = 45
    RULE_assignOp = 46
    RULE_durationConstraint = 47
    RULE_simpleDurationConstraint = 48
    RULE_durOp = 49
    RULE_durValue = 50
    RULE_daEffect = 51
    RULE_timedEffect = 52
    RULE_fAssignDA = 53
    RULE_fExpDA = 54
    RULE_problem = 55
    RULE_problemDecl = 56
    RULE_problemDomain = 57
    RULE_objectDecl = 58
    RULE_init_ = 59
    RULE_initEl = 60
    RULE_nameLiteral = 61
    RULE_atomicNameFormula = 62
    RULE_goal = 63
    RULE_probConstraints = 64
    RULE_prefConGD = 65
    RULE_metricSpec = 66
    RULE_optimization = 67
    RULE_metricFExp = 68
    RULE_conGD = 69

    ruleNames =  [ "pddlDoc", "domain", "domainName", "requireDef", "typesDef", 
                   "typedNameList", "singleTypeNameList", "type_", "primType", 
                   "functionsDef", "functionList", "atomicFunctionSkeleton", 
                   "functionSymbol", "functionType", "constantsDef", "predicatesDef", 
                   "atomicFormulaSkeleton", "predicate", "typedVariableList", 
                   "singleTypeVarList", "constraints", "structureDef", "actionDef", 
                   "actionSymbol", "actionDefBody", "goalDesc", "fComp", 
                   "atomicTermFormula", "term", "durativeActionDef", "daDefBody", 
                   "daGD", "prefTimedGD", "timedGD", "timeSpecifier", "interval", 
                   "derivedDef", "fExp", "fExp2", "fHead", "effect", "cEffect", 
                   "pEffect", "condEffect", "binaryOp", "binaryComp", "assignOp", 
                   "durationConstraint", "simpleDurationConstraint", "durOp", 
                   "durValue", "daEffect", "timedEffect", "fAssignDA", "fExpDA", 
                   "problem", "problemDecl", "problemDomain", "objectDecl", 
                   "init_", "initEl", "nameLiteral", "atomicNameFormula", 
                   "goal", "probConstraints", "prefConGD", "metricSpec", 
                   "optimization", "metricFExp", "conGD" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    REQUIRE_KEY=71
    DOMAIN=72
    DOMAIN_NAME=73
    REQUIREMENTS=74
    TYPES=75
    EITHER_TYPE=76
    CONSTANTS=77
    FUNCTIONS=78
    PREDICATES=79
    ACTION=80
    DURATIVE_ACTION=81
    PROBLEM=82
    PROBLEM_NAME=83
    PROBLEM_DOMAIN=84
    OBJECTS=85
    INIT=86
    FUNC_HEAD=87
    PRECONDITION=88
    EFFECT=89
    AND_GD=90
    OR_GD=91
    NOT_GD=92
    IMPLY_GD=93
    EXISTS_GD=94
    FORALL_GD=95
    COMPARISON_GD=96
    AND_EFFECT=97
    FORALL_EFFECT=98
    WHEN_EFFECT=99
    ASSIGN_EFFECT=100
    NOT_EFFECT=101
    PRED_HEAD=102
    GOAL=103
    BINARY_OP=104
    UNARY_MINUS=105
    INIT_EQ=106
    INIT_AT=107
    NOT_PRED_INIT=108
    PRED_INST=109
    PROBLEM_CONSTRAINT=110
    PROBLEM_METRIC=111
    NAME=112
    VARIABLE=113
    NUMBER=114
    LINE_COMMENT=115
    WHITESPACE=116

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PddlDocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(PddlParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(PddlParser.ProblemContext,0)


        def getRuleIndex(self):
            return PddlParser.RULE_pddlDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddlDoc" ):
                listener.enterPddlDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddlDoc" ):
                listener.exitPddlDoc(self)




    def pddlDoc(self):

        localctx = PddlParser.PddlDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddlDoc)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domainName(self):
            return self.getTypedRuleContext(PddlParser.DomainNameContext,0)


        def requireDef(self):
            return self.getTypedRuleContext(PddlParser.RequireDefContext,0)


        def typesDef(self):
            return self.getTypedRuleContext(PddlParser.TypesDefContext,0)


        def constantsDef(self):
            return self.getTypedRuleContext(PddlParser.ConstantsDefContext,0)


        def predicatesDef(self):
            return self.getTypedRuleContext(PddlParser.PredicatesDefContext,0)


        def functionsDef(self):
            return self.getTypedRuleContext(PddlParser.FunctionsDefContext,0)


        def constraints(self):
            return self.getTypedRuleContext(PddlParser.ConstraintsContext,0)


        def structureDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PddlParser.StructureDefContext)
            else:
                return self.getTypedRuleContext(PddlParser.StructureDefContext,i)


        def getRuleIndex(self):
            return PddlParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = PddlParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(PddlParser.T__0)
            self.state = 145
            self.match(PddlParser.T__1)
            self.state = 146
            self.domainName()
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 147
                self.requireDef()


            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 150
                self.typesDef()


            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 153
                self.constantsDef()


            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 156
                self.predicatesDef()


            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 159
                self.functionsDef()


            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 162
                self.constraints()


            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PddlParser.T__0:
                self.state = 165
                self.structureDef()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(PddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PddlParser.NAME, 0)

        def getRuleIndex(self):
            return PddlParser.RULE_domainName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainName" ):
                listener.enterDomainName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainName" ):
                listener.exitDomainName(self)




    def domainName(self):

        localctx = PddlParser.DomainNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_domainName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(PddlParser.T__0)
            self.state = 174
            self.match(PddlParser.T__3)
            self.state = 175
            self.match(PddlParser.NAME)
            self.state = 176
            self.match(PddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequireDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_KEY(self, i:int=None):
            if i is None:
                return self.getTokens(PddlParser.REQUIRE_KEY)
            else:
                return self.getToken(PddlParser.REQUIRE_KEY, i)

        def getRuleIndex(self):
            return PddlParser.RULE_requireDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireDef" ):
                listener.enterRequireDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireDef" ):
                listener.exitRequireDef(self)




    def requireDef(self):

        localctx = PddlParser.RequireDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_requireDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(PddlParser.T__0)
            self.state = 179
            self.match(PddlParser.T__4)
            self.state = 181 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 180
                self.match(PddlParser.REQUIRE_KEY)
                self.state = 183 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PddlParser.REQUIRE_KEY):
                    break

            self.state = 185
            self.match(PddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedNameList(self):
            return self.getTypedRuleContext(PddlParser.TypedNameListContext,0)


        def getRuleIndex(self):
            return PddlParser.RULE_typesDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypesDef" ):
                listener.enterTypesDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypesDef" ):
                listener.exitTypesDef(self)




    def typesDef(self):

        localctx = PddlParser.TypesDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typesDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(PddlParser.T__0)
            self.state = 188
            self.match(PddlParser.T__5)
            self.state = 189
            self.typedNameList()
            self.state = 190
            self.match(PddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedNameListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PddlParser.NAME)
            else:
                return self.getToken(PddlParser.NAME, i)

        def singleTypeNameList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PddlParser.SingleTypeNameListContext)
            else:
                return self.getTypedRuleContext(PddlParser.SingleTypeNameListContext,i)


        def getRuleIndex(self):
            return PddlParser.RULE_typedNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedNameList" ):
                listener.enterTypedNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedNameList" ):
                listener.exitTypedNameList(self)




    def typedNameList(self):
